--- a/template/app/build.gradle.hbs
+++ b/template/app/build.gradle.hbs
@@ -9,8 +9,8 @@ android {
 
     defaultConfig {
         applicationId "{{package_id_domain}}.{{package_id_org}}.{{package_id_name}}"
-        minSdk {{min_sdk_version}} // TODO: 24 a good safe default
-        targetSdk {{target_sdk_version}}}
+        minSdk {{min_sdk_version}} 
+        targetSdk {{target_sdk_version}}
         versionCode 1
         versionName "1.0"
 
